--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <h1>Christoffer Rehn</h1>
   <p>I&rsquo;m a software engineer living in South Korea.</p>
+  <p>Not much to see here, for now.</p>
 </body>
 
 </html>
