--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Christoffer Rehn</h1>
-  <p>I&rsquo;m a software engineer living in South Korea.</p>
+  <p>I live in South Korea, and work as a software engineer for Coupang.</p>
   <p>Not much to see here, for now.</p>
 </body>
 
