--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
-  <title>Christoffer Rehn</title>
+  <title>:)</title>
 </head>
 
 <body>
-  <h1>Christoffer Rehn</h1>
-  <p>I live in South Korea, and work as a software engineer for Coupang.</p>
-  <p>Not much to see here, for now.</p>
+  <p>:)</p>
 </body>
 
 </html>
